--- a/index.html
+++ b/index.html
@@ -7,6 +7,52 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="main">
+        <div class="sidebar">
+            <!-- Dashboard -->
+            <button class="sidebar-buttons">
+                <img src="assets/view-dashboard.svg" class="main-icon"> Dashboard
+            </button>
+            <!-- Home -->
+            <button class="sidebar-buttons">
+                <img src="assets/home.svg" class="icon"> Home
+            </button>
+            <!-- Profile -->
+            <button class="sidebar-buttons">
+                <img src="assets/card-account-details.svg" class="icon"> Profile
+            </button>
+            <!-- Messages -->
+            <button class="sidebar-buttons">
+                <img src="assets/message-reply.svg" class="icon"> Messages
+            </button>
+            <!-- History -->
+            <button class="sidebar-buttons">
+                <img src="assets/clock-time-four.svg" class="icon"> History
+            </button>
+            <!-- Tasks -->
+            <button class="sidebar-buttons">
+                <img src="assets/note-multiple.svg" class="icon"> Tasks
+            </button>
+            <!-- Communities -->
+            <button class="sidebar-buttons">
+                <img src="assets/account-group.svg" class="icon"> Communities
+            </button>
+            <!-- Settings -->
+            <button class="sidebar-buttons">
+                <img src="assets/cog.svg" class="icon"> Settings
+            </button>
+            <!-- Support -->
+            <button class="sidebar-buttons">
+                <img src="assets/comment-question-outline.svg" class="icon"> Support
+            </button>
+            <!-- Privacy -->
+            <button class="sidebar-buttons">
+                <img src="assets/shield-check-outline.svg" class="icon"> Privacy
+            </button>
+        </div>
+        <div class="header"></div>
+        <div class="content"></div>
+    </div>
     <script src="app.js"></script>
 </body>
 </html>
