Completed sidebar styling

--- a/index.html
+++ b/index.html
@@ -5,49 +5,52 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Admin Dashboard</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="main">
         <div class="sidebar">
             <!-- Dashboard -->
-            <button class="sidebar-buttons">
-                <img src="assets/view-dashboard.svg" class="main-icon"> Dashboard
+            <button class="sidebar-buttons" id="dashboard">
+                <img src="assets/view-dashboard.svg" class="main-icon" > Dashboard
             </button>
             <!-- Home -->
-            <button class="sidebar-buttons">
-                <img src="assets/home.svg" class="icon"> Home
+            <button class="sidebar-buttons" id="home">
+                <img src="assets/home.svg" class="icon" > Home
             </button>
             <!-- Profile -->
-            <button class="sidebar-buttons">
-                <img src="assets/card-account-details.svg" class="icon"> Profile
+            <button class="sidebar-buttons" id="profile">
+                <img src="assets/card-account-details.svg" class="icon" > Profile
             </button>
             <!-- Messages -->
-            <button class="sidebar-buttons">
-                <img src="assets/message-reply.svg" class="icon"> Messages
+            <button class="sidebar-buttons" id="messages">
+                <img src="assets/message-reply.svg" class="icon" > Messages
             </button>
             <!-- History -->
-            <button class="sidebar-buttons">
-                <img src="assets/clock-time-four.svg" class="icon"> History
+            <button class="sidebar-buttons" id="history">
+                <img src="assets/clock-time-four.svg" class="icon" > History
             </button>
             <!-- Tasks -->
-            <button class="sidebar-buttons">
-                <img src="assets/note-multiple.svg" class="icon"> Tasks
+            <button class="sidebar-buttons" id="tasks">
+                <img src="assets/note-multiple.svg" class="icon" > Tasks
             </button>
             <!-- Communities -->
-            <button class="sidebar-buttons">
-                <img src="assets/account-group.svg" class="icon"> Communities
+            <button class="sidebar-buttons" id="communities">
+                <img src="assets/account-group.svg" class="icon" > Communities
             </button>
             <!-- Settings -->
-            <button class="sidebar-buttons">
-                <img src="assets/cog.svg" class="icon"> Settings
+            <button class="sidebar-buttons" id="settings">
+                <img src="assets/cog.svg" class="icon" > Settings
             </button>
             <!-- Support -->
-            <button class="sidebar-buttons">
-                <img src="assets/comment-question-outline.svg" class="icon"> Support
+            <button class="sidebar-buttons" id="support">
+                <img src="assets/comment-question-outline.svg" class="icon" > Support
             </button>
             <!-- Privacy -->
-            <button class="sidebar-buttons">
-                <img src="assets/shield-check-outline.svg" class="icon"> Privacy
+            <button class="sidebar-buttons" id="privacy">
+                <img src="assets/shield-check-outline.svg" class="icon" > Privacy
             </button>
         </div>
         <div class="header"></div>
