Header HTML elements added

--- a/index.html
+++ b/index.html
@@ -53,7 +53,34 @@
                 <img src="assets/shield-check-outline.svg" class="icon" > Privacy
             </button>
         </div>
-        <div class="header"></div>
+        <div class="header">
+            <div class="top-header">
+                <div class="top-left">
+                    <img src="assets/magnify.svg" class="icon">
+                    <input type="text">
+                </div>
+
+                <div class="top-right">
+                    <img src="assets/bell-ring-outline.svg" class="icon">
+                    <img src="assets/kowala.jpg" class="profile_pic">
+                    <p>Morgan Oakley</p>
+                </div>
+            </div>
+
+            <div class="bottom-header">
+                <div class="bottom-left">
+                    <img src="assets/kowala.jpg" class="profile_pic">
+                    <p>Hi there,</p>
+                    <p>Morgan Oakley (@morgan)</p>
+                </div>
+                
+                <div class="bottom-right">
+                    <button>New</button>
+                    <button>Upload</button>
+                    <button>Share</button>
+                </div>
+            </div>
+        </div>
         <div class="content"></div>
     </div>
     <script src="app.js"></script>
