--- a/index.html
+++ b/index.html
@@ -56,24 +56,26 @@
         <div class="header">
             <div class="top-header">
                 <div class="top-left">
-                    <img src="assets/magnify.svg" class="icon">
-                    <input type="text">
+                    <img src="assets/magnify.svg" class="header-icon">
+                    <input type="text" class="search">
                 </div>
 
                 <div class="top-right">
-                    <img src="assets/bell-ring-outline.svg" class="icon">
-                    <img src="assets/kowala.jpg" class="profile_pic">
+                    <img src="assets/bell-ring-outline.svg" class="header-icon">
+                    <img src="assets/kowala.png" class="profile-pic-top">
                     <p>Morgan Oakley</p>
                 </div>
             </div>
 
             <div class="bottom-header">
                 <div class="bottom-left">
-                    <img src="assets/kowala.jpg" class="profile_pic">
-                    <p>Hi there,</p>
-                    <p>Morgan Oakley (@morgan)</p>
+                    <img src="assets/kowala.png" class="profile-pic-bottom">
+                    <div class="hi-there">
+                        <p>Hi there,</p>
+                        <p>Morgan Oakley (@morgan)</p>
+                    </div>
                 </div>
-                
+
                 <div class="bottom-right">
                     <button>New</button>
                     <button>Upload</button>
