Finished styling announcements section

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;400;500;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="main">
@@ -83,7 +83,102 @@
                 </div>
             </div>
         </div>
-        <div class="content"></div>
+        <div class="content">
+            <div class="projects">
+                <div class="your_projects">Your Projects</div>
+                <div class="projects-container">
+                    <div class="project">
+                        <div class="text">
+                            <p class="heading">Super Cool Project</p>
+                            <p class="subtext">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ducimus repellendus blanditiis deleniti. Quo earum hic ullam aut nemo quaerat soluta fugit recusandae, harum officia asperiores deleniti error quis dolores voluptatibus.</p>
+                        </div>
+                        <div class="icons">
+                            <img src="assets/star-check-outline.svg" class="project-icon">
+                            <img src="assets/eye-plus-outline.svg" class="project-icon">
+                            <img src="assets/share-variant-outline.svg" class="project-icon">
+                        </div>
+                    </div>
+                    <div class="project">
+                        <div class="text">
+                            <p class="heading">Super Cool Project</p>
+                            <p class="subtext">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ducimus repellendus blanditiis deleniti. Quo earum hic ullam aut nemo quaerat soluta fugit recusandae, harum officia asperiores deleniti error quis dolores voluptatibus.</p>
+                        </div>
+                        <div class="icons">
+                            <img src="assets/star-check-outline.svg" class="project-icon">
+                            <img src="assets/eye-plus-outline.svg" class="project-icon">
+                            <img src="assets/share-variant-outline.svg" class="project-icon">
+                        </div>
+                    </div>
+                    <div class="project">
+                        <div class="text">
+                            <p class="heading">Super Cool Project</p>
+                            <p class="subtext">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ducimus repellendus blanditiis deleniti. Quo earum hic ullam aut nemo quaerat soluta fugit recusandae, harum officia asperiores deleniti error quis dolores voluptatibus.</p>
+                        </div>
+                        <div class="icons">
+                            <img src="assets/star-check-outline.svg" class="project-icon">
+                            <img src="assets/eye-plus-outline.svg" class="project-icon">
+                            <img src="assets/share-variant-outline.svg" class="project-icon">
+                        </div>
+                    </div>
+                    <div class="project">
+                        <div class="text">
+                            <p class="heading">Super Cool Project</p>
+                            <p class="subtext">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ducimus repellendus blanditiis deleniti. Quo earum hic ullam aut nemo quaerat soluta fugit recusandae, harum officia asperiores deleniti error quis dolores voluptatibus.</p>
+                        </div>
+                        <div class="icons">
+                            <img src="assets/star-check-outline.svg" class="project-icon">
+                            <img src="assets/eye-plus-outline.svg" class="project-icon">
+                            <img src="assets/share-variant-outline.svg" class="project-icon">
+                        </div>
+                    </div>
+                    <div class="project">
+                        <div class="text">
+                            <p class="heading">Super Cool Project</p>
+                            <p class="subtext">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ducimus repellendus blanditiis deleniti. Quo earum hic ullam aut nemo quaerat soluta fugit recusandae, harum officia asperiores deleniti error quis dolores voluptatibus.</p>
+                        </div>
+                        <div class="icons">
+                            <img src="assets/star-check-outline.svg" class="project-icon">
+                            <img src="assets/eye-plus-outline.svg" class="project-icon">
+                            <img src="assets/share-variant-outline.svg" class="project-icon">
+                        </div>
+                    </div>
+                    <div class="project">
+                        <div class="text">
+                            <p class="heading">Super Cool Project</p>
+                            <p class="subtext">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ducimus repellendus blanditiis deleniti. Quo earum hic ullam aut nemo quaerat soluta fugit recusandae, harum officia asperiores deleniti error quis dolores voluptatibus.</p>
+                        </div>
+                        <div class="icons">
+                            <img src="assets/star-check-outline.svg" class="project-icon">
+                            <img src="assets/eye-plus-outline.svg" class="project-icon">
+                            <img src="assets/share-variant-outline.svg" class="project-icon">
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="announcements">
+                <div class="your_announcements">Announcements</div>
+                <div class="announcements-container">
+                    <div class="announcement" id="first-announcement">
+                        <p class="small-heading">Super Cool Project</p>
+                        <p class="small-subtext">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ducimus repellendus blanditiis deleniti...</p>
+                    </div>
+                    <div class="announcement" id="second-announcement">
+                        <p class="small-heading">Super Cool Project</p>
+                        <p class="small-subtext">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ducimus repellendus blanditiis deleniti...</p>
+                    </div>
+                    <div class="announcement">
+                        <p class="small-heading">Super Cool Project</p>
+                        <p class="small-subtext">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ducimus repellendus blanditiis deleniti...</p>
+                    </div>
+                </div>
+            </div>
+            <div class="trending-container">
+                <div class="profile"></div>
+                <div class="profile"></div>
+                <div class="profile"></div>
+                <div class="profile"></div>
+            </div>
+        </div>
     </div>
     <script src="app.js"></script>
 </body>
