Completed styling of trending section

--- a/index.html
+++ b/index.html
@@ -155,28 +155,57 @@
                     </div>
                 </div>
             </div>
-            <div class="announcements">
-                <div class="your_announcements">Announcements</div>
-                <div class="announcements-container">
-                    <div class="announcement" id="first-announcement">
-                        <p class="small-heading">Super Cool Project</p>
-                        <p class="small-subtext">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ducimus repellendus blanditiis deleniti...</p>
-                    </div>
-                    <div class="announcement" id="second-announcement">
-                        <p class="small-heading">Super Cool Project</p>
-                        <p class="small-subtext">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ducimus repellendus blanditiis deleniti...</p>
-                    </div>
-                    <div class="announcement">
-                        <p class="small-heading">Super Cool Project</p>
-                        <p class="small-subtext">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ducimus repellendus blanditiis deleniti...</p>
+            <div class="content-right">
+                <div class="announcements">
+                    <div class="your_announcements">Announcements</div>
+                    <div class="announcements-container">
+                        <div class="announcement" id="first-announcement">
+                            <p class="small-heading">Site Maintenance</p>
+                            <p class="small-subtext">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ducimus repellendus blanditiis deleniti...</p>
+                        </div>
+                        <div class="announcement" id="second-announcement">
+                            <p class="small-heading">Community Share Day</p>
+                            <p class="small-subtext">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ducimus repellendus blanditiis deleniti...</p>
+                        </div>
+                        <div class="announcement">
+                            <p class="small-heading">Updated Privacy Policy</p>
+                            <p class="small-subtext">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ducimus repellendus blanditiis deleniti...</p>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="trending-container">
-                <div class="profile"></div>
-                <div class="profile"></div>
-                <div class="profile"></div>
-                <div class="profile"></div>
+                <div class="trending">
+                    <div class="your_trending">Trending</div>
+                    <div class="trending_container">
+                        <div class="profile">
+                            <img src="assets/bat.png" class="profile-icon">
+                            <div class="profile-text">
+                                <p>@tegan</p>
+                                <p>World Peace Builder</p>
+                            </div>
+                        </div>
+                        <div class="profile">
+                            <img src="assets/owl.png" class="profile-icon">
+                            <div class="profile-text">
+                                <p>@morgan</p>
+                                <p>Super Cool Project</p>
+                            </div>
+                        </div>
+                        <div class="profile">
+                            <img src="assets/halloween.png" class="profile-icon">
+                            <div class="profile-text">
+                                <p>@kendall</p>
+                                <p>Live Changing App</p>
+                            </div>
+                        </div>
+                        <div class="profile">
+                            <img src="assets/burning.png" class="profile-icon">
+                            <div class="profile-text">
+                                <p>@alex</p>
+                                <p>No Traffic Maker</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
